--- a/locale/fr/ACCESS_fr.po
+++ b/locale/fr/ACCESS_fr.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dynacase-admin-uis\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-09-05 13:27+0200\n"
-"PO-Revision-Date: 2013-04-16 11:08+0200\n"
+"POT-Creation-Date: 2016-10-14 11:49+0200\n"
+"PO-Revision-Date: 2016-10-14 11:52+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
 "Language: fr\n"
@@ -18,256 +18,219 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
-#: Apps/ACCESS/ACCESS.app:7
 msgid "Access"
 msgstr "Gestion des accessibilités"
 
-#: Actions/ACCESS/appl_access.php:59
 msgid "Account filter"
 msgstr "Rechercher un compte"
 
-#: Apps/ACCESS/ACCESS.app:20
 msgid "Admin Access"
 msgstr "Accès administrateur"
 
-#: Apps/ACCESS/ACCESS.app:61
 msgid "Application Access"
 msgstr "par applications"
 
-#: Actions/ACCESS/user_access.php:63
 msgid "Application filter"
 msgstr "Filtrer les applications"
 
-#: Actions/ACCESS/edit.php:71
 msgid "Cannot edit access. No application parameter."
 msgstr ""
 "Accès aux privilèges impossible : identifiant de l'application non définit."
 
-#: Actions/ACCESS/edit.php:72
 msgid "Cannot edit access. No user parameter."
 msgstr ""
 "Accès aux privilèges impossible : identifiant de l'utilisateur non définit."
 
-#: tempCatalog.php:12
 msgid "Download access acl"
 msgstr "Télécharger la configuration des droits applicatifs"
 
-#: Apps/ACCESS/ACCESS.app:85
 msgid "Edit any access"
 msgstr "Editer n'importe quel accès"
 
-#: Apps/ACCESS/ACCESS.app:92
 msgid "Get account"
 msgstr "Récupérer les informations des comptes"
 
-#: Apps/ACCESS/ACCESS.app:124
 msgid "Get accounttypes image"
 msgstr "Récupérer les images des différents type de compte"
 
-#: Apps/ACCESS/ACCESS.app:100
 msgid "Get application"
 msgstr "Récupérer les informations des applications"
 
-#: Apps/ACCESS/ACCESS.app:108
 msgid "Get datatable information"
 msgstr "Récupérer les informations pour la datatable"
 
-#: Apps/ACCESS/ACCESS.app:116
 msgid "Get datatable information for User, group or role"
 msgstr ""
 "Récupérer les informations pour la datatable des utilisateurs, groupes ou "
 "rôles"
 
-#: Apps/ACCESS/ACCESS.app:42
 msgid "Group Access"
 msgstr "par groupes"
 
-#: Apps/ACCESS/ACCESS.app:81
 msgid "Import/Export"
 msgstr "Import/Export"
 
-#: tempCatalog.php:5
 msgid "Inherited grant"
 msgstr "Droits hérités"
 
-#: tempCatalog.php:3 tempCatalog.php:25 tempCatalog.php:26
 msgid "Modify access"
 msgstr "Modifier les droits d'accès"
 
-#: Apps/ACCESS/ACCESS.app:66
 msgid "Modify any access"
 msgstr "Modifier n'importe quel objet"
 
-#: tempCatalog.php:7
 msgid "Negative grant"
 msgstr "Droits négatifs"
 
-#: tempCatalog.php:6
 msgid "Positive grant"
 msgstr "Droits positifs"
 
-#: tempCatalog.php:8
 msgid "Result grant"
 msgstr "Droits résultants"
 
-#: Actions/ACCESS/edit.php:56
 msgid "Role"
 msgstr "Rôle"
 
-#: Apps/ACCESS/ACCESS.app:52
 msgid "Role Access"
 msgstr "par rôles"
 
-#: Actions/ACCESS/appl_access.php:55
 msgid "Select Application Access"
 msgstr "Application"
 
-#: Actions/ACCESS/user_access.php:72
 msgid "Select Group Access"
 msgstr "Groupe"
 
-#: Actions/ACCESS/user_access.php:74
 msgid "Select Role Access"
 msgstr "Rôle"
 
-#: Actions/ACCESS/user_access.php:76
 msgid "Select User Access"
 msgstr "Utilisateur"
 
-#: tempCatalog.php:16
+msgid "Token Access"
+msgstr "Accès aux clefs d'authentification"
+
+msgid "Token Data"
+msgstr "Données des clefs d'authentification"
+
+msgid "Token access"
+msgstr "clefs d'authentification"
+
 msgid "Upload access acl"
 msgstr "Importer un fichier de configuration de droits applicatifs"
 
-#: Actions/ACCESS/edit.php:48
 msgid "User"
 msgstr "Utilisateur"
 
-#: Apps/ACCESS/ACCESS.app:34
 msgid "User Access"
 msgstr "par utilisateurs"
 
-#: Apps/ACCESS/ACCESS.app:8
 msgid "What Access Management"
 msgstr "Paramétrage des ACL applications et actions"
 
-#: Apps/ACCESS/ACCESS.app:26
 msgid "access:ADMIN_ACTIONS_LIST short_name"
 msgstr "Accessibilités"
 
-#: Apps/ACCESS/haccess.php:337
 msgid "access:All"
 msgstr "Tous"
 
-#: tempCatalog.php:23
 msgid "access:Close"
 msgstr "Fermer"
 
-#: Actions/ACCESS/edit.php:52
 msgid "access:Group"
 msgstr "Groupe"
 
-#: tempCatalog.php:18
 msgid "access:No matching record found"
 msgstr "Aucun résultat recherché trouvé"
 
-#: tempCatalog.php:20
 msgid "access:No result"
 msgstr "Aucun résultat trouvé"
 
-#: tempCatalog.php:21
 msgid "access:Processing"
 msgstr "Traitement en cours"
 
-#: tempCatalog.php:17
 msgid "access:Show All Items"
 msgstr "Afficher tous les éléments"
 
-#: tempCatalog.php:19
 msgid "access:Showing _START_ to _END_ of _TOTAL_ "
 msgstr "Affiche les résultats _START_ à _END_ sur _TOTAL_"
 
-#: Actions/ACCESS/user_access.php:60
 msgid "access:appname"
 msgstr "Application"
 
-#: tempCatalog.php:22
 msgid "access:modify"
 msgstr "Modifier"
 
-#: Apps/ACCESS/haccess.php:46
-#, c-format
+#, php-format
 msgid "access:no account match '%s'"
 msgstr "Aucun compte correspondant à '%s'"
 
-#: Apps/ACCESS/haccess.php:79
-#, c-format
+#, php-format
 msgid "access:no application match '%s'"
 msgstr "Aucune application correspondante à '%s'"
 
-#: Actions/ACCESS/appl_access.php:56
 msgid "access:userlogin"
 msgstr "Compte"
 
-#: tempCatalog.php:4
 msgid "accessfor"
 msgstr "Contrôle des accès pour"
 
-#: tempCatalog.php:24
 msgid "accesss:Close"
 msgstr "Fermer"
 
-#: Actions/ACCESS/appl_access.php:60
+msgid "accesstoken:context"
+msgstr "Contexte"
+
+msgid "accesstoken:date"
+msgstr "Expiration"
+
+msgid "accesstoken:expandable"
+msgstr "Unitaire"
+
+msgid "accesstoken:token"
+msgstr "Clef"
+
+msgid "accesstoken:user"
+msgstr "Utilisateur"
+
 msgid "accounttype"
 msgstr "Type"
 
-#: Actions/ACCESS/upload.php:154
-#, c-format
+#, php-format
 msgid "add acl %s for %s %s\n"
 msgstr "ajout privilège %s pour %s %s\n"
 
-#: Actions/ACCESS/user_access.php:61
 msgid "appdesc"
 msgstr "Description"
 
-#: Apps/ACCESS/haccess.php:110 Apps/ACCESS/haccess.php:233
 msgid "controlaccess"
 msgstr "Contrôle des accès"
 
-#: tempCatalog.php:9 tempCatalog.php:10
 msgid "download"
 msgstr "Télécharger le fichier d'acces"
 
-#: tempCatalog.php:1
 msgid "filter on accounttype"
 msgstr "Filtrer par type de compte"
 
-#: tempCatalog.php:2
 msgid "filter on lastname"
 msgstr "Filtrer sur le nom"
 
-#: Apps/ACCESS/haccess.php:171 Apps/ACCESS/haccess.php:284
 msgid "none"
 msgstr "Aucun"
 
-#: Actions/ACCESS/user_access.php:62 Actions/ACCESS/appl_access.php:58
 msgid "permissions"
 msgstr "Droits"
 
-#: tempCatalog.php:11 tempCatalog.php:13 tempCatalog.php:14 tempCatalog.php:15
 msgid "upload"
 msgstr "Charger un fichier d'acces"
 
-#: Actions/ACCESS/upload.php:76
-#, c-format
+#, php-format
 msgid "user %s %s has been added\n"
 msgstr "l'utilisateur %s %s a été ajouté\n"
 
-#: Actions/ACCESS/upload.php:71
-#, c-format
+#, php-format
 msgid "user %s %s has been modified\n"
 msgstr "l'utilisateur %s %s a été modifié\n"
 
-#: Actions/ACCESS/appl_access.php:57
 msgid "username"
 msgstr "Nom"
 
