--- a/locale/en/ACCESS_en.po
+++ b/locale/en/ACCESS_en.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dynacase-admin-uis\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-10-17 15:18+0200\n"
-"PO-Revision-Date: 2016-10-17 14:23+0200\n"
+"POT-Creation-Date: 2016-10-18 14:13+0200\n"
+"PO-Revision-Date: 2016-10-18 14:16+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
 "Language: fr\n"
@@ -97,6 +97,11 @@ msgstr ""
 msgid "Negative grant"
 msgstr ""
 
+#, php-format
+msgctxt "accesstoken"
+msgid "No user match %s"
+msgstr ""
+
 msgctxt "accesstoken"
 msgid "Once"
 msgstr ""
@@ -137,6 +142,9 @@ msgid "Token Data"
 msgstr ""
 
 msgid "Token Methods"
+msgstr ""
+
+msgid "Token User Data"
 msgstr ""
 
 msgid "Token access"
@@ -233,8 +241,14 @@ msgstr "Last created token is"
 msgid "accesstoken:Never expire"
 msgstr "Never expire"
 
+msgid "accesstoken:New token"
+msgstr "New authorization token"
+
 msgid "accesstoken:One shot"
 msgstr "One shot"
+
+msgid "accesstoken:Show expired tokens"
+msgstr "Show expired tokens"
 
 msgid "accesstoken:Token Deletion"
 msgstr "Token Deletion"
